--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,16 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  flutter_bloc: ^8.1.2
   flutter:
     sdk: flutter
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter  
   flutter_lints: ^2.0.0
 
 flutter:
